[gd_scene load_steps=20 format=3 uid="uid://w7m6tehvvy3g"]

[ext_resource type="Script" uid="uid://cxvp18swq6d02" path="res://Scripts/player.gd" id="1_qt7d6"]
[ext_resource type="Texture2D" uid="uid://dxbibuqe0kh0l" path="res://Assets/Spritesheet/Blue-Blob-Idle 1.png" id="2_ak25i"]
[ext_resource type="Texture2D" uid="uid://dxp77wq60c2rr" path="res://Assets/Textures/CloudTexture.png" id="3_8vxmb"]
[ext_resource type="Texture2D" uid="uid://6ks0wy7qe6p3" path="res://Assets/Spritesheet/Blue-Blob-Idle 3.png" id="3_fdt7q"]
[ext_resource type="PackedScene" uid="uid://d24pmgsqloknn" path="res://Scenes/Prefabs/yanathorn.tscn" id="4_0ctox"]
[ext_resource type="Texture2D" uid="uid://cudkd6ckheg1k" path="res://Assets/Spritesheet/Blue-Blob-Idle 4.png" id="4_k7ict"]
[ext_resource type="Texture2D" uid="uid://dvypnj7i80t7y" path="res://Assets/Spritesheet/Blue-Blob-Jump 1.png" id="5_qapsg"]
[ext_resource type="Texture2D" uid="uid://cnwqa3we7dal4" path="res://Assets/Spritesheet/Blue-Blob-Jump 2.png" id="6_eejau"]
[ext_resource type="Texture2D" uid="uid://da41umnjl2gfp" path="res://Assets/Spritesheet/Blue-Blob-Jump 3.png" id="7_rc3i2"]
[ext_resource type="Texture2D" uid="uid://byeipdv1v8od4" path="res://Assets/Spritesheet/Blue-Blob-Jump 4.png" id="8_ultsi"]
[ext_resource type="Texture2D" uid="uid://cnj0bmcs1g4no" path="res://Assets/Spritesheet/Blue-Blob-Run 1.png" id="9_823f0"]
[ext_resource type="Texture2D" uid="uid://brh3ctjc5nm0q" path="res://Assets/Spritesheet/Blue-Blob-Run 2.png" id="10_33gpj"]
[ext_resource type="Texture2D" uid="uid://ppdigan0xmg7" path="res://Assets/Spritesheet/Blue-Blob-Run 3.png" id="11_5us4r"]
[ext_resource type="Texture2D" uid="uid://bj3cknsdcey2o" path="res://Assets/Spritesheet/Blue-Blob-Run 4.png" id="12_dfo05"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4nss6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ak25i")
}, {
"duration": 1.0,
"texture": ExtResource("3_fdt7q")
}, {
"duration": 1.0,
"texture": ExtResource("4_k7ict")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_qapsg")
}, {
"duration": 1.0,
"texture": ExtResource("6_eejau")
}, {
"duration": 1.0,
"texture": ExtResource("7_rc3i2")
}, {
"duration": 1.0,
"texture": ExtResource("8_ultsi")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_823f0")
}, {
"duration": 1.0,
"texture": ExtResource("10_33gpj")
}, {
"duration": 1.0,
"texture": ExtResource("11_5us4r")
}, {
"duration": 1.0,
"texture": ExtResource("12_dfo05")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n4sts"]
radius = 11.0
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvbjh"]
size = Vector2(22.75, 43.8125)

[sub_resource type="Curve" id="Curve_m2jh0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.246032, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_3gc37"]
offsets = PackedFloat32Array(0.25, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_mask = 10
script = ExtResource("1_qt7d6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 4)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4nss6")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("CapsuleShape2D_n4sts")

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_tvbjh")

[node name="ParticleTrails" type="CPUParticles2D" parent="."]
position = Vector2(0, 42)
emitting = false
amount = 20
texture = ExtResource("3_8vxmb")
lifetime = 0.4
speed_scale = 0.8
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 0.2
scale_amount_max = 0.6
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(-1, 15)
emitting = false
amount = 20
lifetime = 0.6
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 0.4
emission_shape = 2
emission_sphere_radius = 50.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
damping_min = 1.0
damping_max = 1.0
scale_amount_min = 15.0
scale_amount_max = 30.0
scale_amount_curve = SubResource("Curve_m2jh0")
color_ramp = SubResource("Gradient_3gc37")

[node name="Yanathorn" parent="." instance=ExtResource("4_0ctox")]
visible = false
position = Vector2(0, 42)
scale = Vector2(0.13, 0.13)

[connection signal="body_entered" from="Collision" to="." method="_on_collision_body_entered"]
